<resources>
    <string name="app_name">Smart Shopping Application</string>

    <string name="title_activity_welcome_screen">Smart Shopping</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="click_here_to_continue">Click here to Continue</string>
    <string name="welcome_to_smart_shopping">Welcome to Smart-Shopping</string>
    <string name="skip">Skip &amp; Continue</string>
    <string name="log_in">Log In</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name_e_g_nido123">User-name e.g nido123</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="address">Address</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="cart">CART</string>
    <string name="create_a_new_account">Create A new Account</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="log_into_your_account">Already have an Account ? Login</string>
    <string name="need_a_new_account">Need A new Account ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_name">User Name</string>
    <string name="communicate">Communicate</string>
    <string name="orders">Orders</string>
    <string name="cart_info">Cart-Info</string>
    <string name="settings">Settings</string>
    <string name="brands">Brands</string>
    <string name="change_image">change Image</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_image">product image</string>
    <string name="phone">Phone #</string>
    <string name="first_name1">First Name :</string>
    <string name="las">Last Name :</string>
    <string name="postal_code1">Postal Code :</string>
    <string name="address1">Address :</string>
    <string name="save">Save</string>
    <string name="phone123">Phone # :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_check_detais">Tap to Check detais</string>
    <string name="product_description">Product Description</string>
    <string name="categories">categories</string>
    <string name="product_price">Product Price</string>
    <string name="product_ida">product id</string>
    <string name="favourites">Favourites</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="qr_code_scanner">QR-Code-Scanner</string>
    <string name="liked_by_2_people">Liked by 2 People</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="select_size">Select size</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceed_to_checkout">Proceed to CheckOut</string>
    <string name="quantity">Quantity</string>
    <string name="quantity12">Quantity :</string>
    <string name="_1">1</string>
    <string name="enter_size">Enter Size :</string>
    <string name="small23">Small</string>

    <array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X Large</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="country">Country</string>
    <string name="country123">Country :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="your_products">Your Products</string>
    <string name="order_history">Order History</string>
    <string name="date">Date</string>
    <string name="sale_type">Sale Type</string>
    <string name="_30_off">30% off</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date  :</string>
    <string name="sales_notification">Sales Notification</string>
    <string name="email23">Email :</string>
    <string name="laptops">Laptops</string>
    <string name="led_tv">LED TV</string>
    <string name="mobiles">Mobiles</string>
    <string name="complaints">Complaints</string>
    <string name="hint">hint</string>
    <string name="subject">Subject</string>
    <string name="receiver_email">Receiver Email</string>
    <string name="complaint">Complaint</string>
    <string name="send_complaint">Send Complaint</string>
    <string name="places_project_needs_permission_to_acces_device_location_to_provide_required_services_please_allow_the_permission">Places Project needs permission to acces device location to provide required services. Please allow the permission</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_request">Permission Request</string>
    <string name="nearby_outlets">Nearby Outlets</string>





    <string name="google_maps_apii">AIzaSyBIxI5sG15Ap78sXpCdP06L0yS1FhmRHJw</string>
    <string name="find_electronic_stores">Find ELectronic Stores</string>
    <string name="find_clothing_store">Find Clothing Store</string>
    <string name="find_outlet">Find Outlet</string>


</resources>
