<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:background="@color/transparent"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        >

        <ImageView
            android:id="@+id/product_image_rcv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/img_prof_icon"/>


        <TextView
            android:id="@+id/product_name_rcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            android:textColor="@color/black_overlay"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_below="@+id/product_image_rcv"
            />

        <TextView
            android:layout_width="100dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/product_price_rcv"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/product_name_rcv"
            android:textSize="18sp"
            android:text="@string/price"
            android:textColor="@color/black_overlay"
            android:layout_marginStart="20dp"/>

        <ImageButton
            android:id="@+id/btn_like_rcv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_rcv"
            android:layout_alignEnd="@+id/product_name_rcv"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/product_price_rcv"
            android:background="@color/transparent"
            android:src="@drawable/unlike" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price_rcv"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:id="@+id/llllllll"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:layout_marginStart="12dp"
                android:text="@string/quantity12"/>

            <EditText
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/_1"
                android:gravity="center"
                android:textColor="@color/black_overlay"
                android:id="@+id/quantity_rcv"
                android:inputType="number"/>



        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_product_to_cart_rcv"
            android:layout_below="@+id/llllllll"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/buttons"
            android:text="@string/add_to_cart"
            />



    </RelativeLayout>






</android.support.v7.widget.CardView>