<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:id="@+id/product_image_item"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/outfitters"
            android:layout_below="@+id/product_name_item"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/product_id_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image_item"
            android:text="@string/product_ida"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/product_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_id_item"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price_item"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:id="@+id/lllllllll">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:layout_marginStart="12dp"
            android:text="@string/quantity12"/>

        <EditText
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/_1"
            android:gravity="center"
            android:textColor="@color/black_overlay"
            android:id="@+id/quantity_item"
            android:inputType="number"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_product_to_cart_item"
            android:layout_below="@+id/lllllllll"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttons"
            android:text="@string/add_to_cart"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_remove_favourie"
            android:layout_below="@+id/btn_add_product_to_cart_item"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittextinput"
            android:text="@string/remove_from_favourites"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>