<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/transparent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black_overlay"
            android:text="@string/product_ida"
            android:layout_marginTop="5dp"
            android:id="@+id/id_rcv_checkout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black_overlay"
            android:text="@string/product_name"
            android:layout_marginTop="5dp"
            android:id="@+id/name_rcv_checkout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black_overlay"
            android:text="@string/price"
            android:layout_marginTop="5dp"
            android:id="@+id/price_rcv_checkout"/>
    </LinearLayout>
</android.support.v7.widget.CardView>