<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:id="@+id/product_image_history"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/outfitters"
            android:layout_below="@+id/product_name_history"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/product_id_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image_history"
            android:text="@string/product_ida"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/product_price_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_id_history"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price_history"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:id="@+id/lllllllll">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:layout_marginStart="12dp"
                android:text="@string/quantity12"/>

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/_1"
                android:gravity="center"
                android:textColor="@color/black_overlay"
                android:id="@+id/quantity_history"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_rcv_order_history"
            android:layout_below="@id/lllllllll"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>