<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/backgroundlogin">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/login_toolbar"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/login_to_your_account"
            android:textColor="@color/black_overlay"
            android:textSize="30sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittextinput"
            android:paddingStart="15dp"

            android:paddingTop="15dp"
            android:paddingEnd="15dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:alpha="0.5"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_overlay" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextinput"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black_overlay" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/remeber_me_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/remember_me"
                android:textColor="@color/black_overlay" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:padding="5dp"
                android:background="@color/transparent"
                android:layout_marginStart="50dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_login_account"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttons"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>