<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".Complaints" >

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/complaint_appbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@+id/btn_sendcomplaint"
        android:layout_below="@+id/complaint_appbar"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_compl"
            android:textColorHint="@color/white"
            android:background="@color/edittextbackground"
            android:layout_margin="10dp"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receiver_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/white"
            android:background="@color/edittextbackground"
            android:id="@+id/complaint_subject"
            android:padding="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/complain_msg"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:background="@color/edittextbackground"
            android:layout_margin="10dp"
          >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:lines="20"
                android:gravity="start"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:layout_height="match_parent"
                android:hint="@string/complaint" />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/btn_sendcomplaint"
        android:layout_alignParentBottom="true"
        android:text="@string/send_complaint"
        android:background="@drawable/buttons"/>

</RelativeLayout>


